# id3tags

./: CMakeLists.txt  LICENSE  id3tags.cpp
